kog         2005/10/06 21:10:27 UTC	(20051006-2727)
  Log:
  moved new memo notice into modules/memoserv/main.c 
  

  Changes:	Modified:
  +0 -6		trunk/modules/nickserv/identify.c (File Modified) 
  +0 -6		trunk/modules/userserv/login.c (File Modified) 


nenolod     2005/10/06 17:17:52 UTC	(20051006-2725)
  Log:
  free(n->data) is incorrect, use free(memo) instead.
  

  Changes:	Modified:
  +2 -1		trunk/modules/memoserv/delete.c (File Modified) 


jilles      2005/10/06 11:40:01 UTC	(20051006-2723)
  Log:
  - Use myuser->name for the sender field, not their current nick
  - Fix MU_EMAILMEMOS check in forward
  - Use myuser_notice() for notifying target user (if logged in)
    giving both nick and myuser->name of sender (sender is still
    only notified about logged in recipient if it is with the
    registered nick)
  - Make the send and forward code a bit more similar
  

  Changes:	Modified:
  +12 -8	trunk/modules/memoserv/forward.c (File Modified) 
  +19 -16	trunk/modules/memoserv/send.c (File Modified) 


kog         2005/10/06 10:56:35 UTC	(20051006-2721)
  Log:
  third party contrib for random password generation (nickserv and userserv modules include) -- Kog
  

  Changes:	Modified:
  + -		trunk/contrib/ns_generatepass.c (File Added) 
  + -		trunk/contrib/us_generatepass.c (File Added) 


jilles      2005/10/06 10:52:54 UTC	(20051006-2719)
  Log:
  Send a notice to all users already logged in to an account
  on login.
  

  Changes:	Modified:
  +2 -0		trunk/modules/nickserv/identify.c (File Modified) 
  +2 -0		trunk/modules/userserv/login.c (File Modified) 


jilles      2005/10/06 10:50:45 UTC	(20051006-2717)
  Log:
  Add myuser_notice() to send a notice to all users
  logged in to a certain myuser.
  

  Changes:	Modified:
  +1 -0		trunk/include/extern.h (File Modified) 
  +24 -0	trunk/src/node.c (File Modified) 


jilles      2005/10/06 10:28:21 UTC	(20051006-2715)
  Log:
  Correct "too long" error message.
  

  Changes:	Modified: